@@ -1,3 +1,5 @@
+2005/12/13 -- released version 20051213_trunk
+
 2005/12/12 -- released version 20051212_trunk
 
 * SSH.pm: new variable 'keytype' + bugfixes
